@startuml

title __SPECIALMOVABLE's Class Diagram__\n

  namespace Model.Pieces {
    namespace Movable {
      namespace SpecialMovable {
        class Model.Pieces.Movable.SpecialMovable.Dwarf {
            + Dwarf()
            + move()
        }
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      namespace SpecialMovable {
        class Model.Pieces.Movable.SpecialMovable.Scout {
            + Scout()
            + move()
        }
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      namespace SpecialMovable {
        class Model.Pieces.Movable.SpecialMovable.Slayer {
            + Slayer()
            + move()
        }
      }
    }
  }
  

  Model.Pieces.Movable.SpecialMovable.Dwarf -up-|> Model.Pieces.Movable.SpecialMovablePiece
  Model.Pieces.Movable.SpecialMovable.Scout -up-|> Model.Pieces.Movable.SpecialMovablePiece
  Model.Pieces.Movable.SpecialMovable.Slayer -up-|> Model.Pieces.Movable.SpecialMovablePiece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
